# UsbClicker

./: .gitignore  CMakeLists.txt  make_emscripten.bat
asset/font/: proggy_clean.fnt
asset/shader/: particle.frag  particle.vert  particle_textured.frag  particle_textured.vert  primitive.frag  primitive.vert  textured.frag  textured.vert
include/: audio.h  core.h  ctx.h  particle.h  video.h
src/: audio.c  core.c  ctx.c  font.c  particle.c  sketch.c  sprite.c  video.c  video_private.h
